# DEC-P3

./: .gitignore  README.md  dagster_cloud.yaml  f1.py  generate_test_data.py  get_dims.py  get_track_path.py  laps_data.jsonl  notes.md  requirements.txt  sqlfluff  streamlit_app.py  telemetry_stream.py  template.env
dagster/: README.md  pyproject.toml  setup.cfg  setup.py
dagster/f1_pipeline/: __init__.py  resource.yml
dagster/f1_pipeline/assets/dbt/: dbt_assets.py
dagster/f1_pipeline/assets/jolpi/: __init__.py  jolpi_assets.py
dagster/f1_pipeline/assets/jolpi_api/: jolpi_assets.py
dagster/f1_pipeline/jobs/: __init__.py
dagster/f1_pipeline/schedules/: __init__.py
dagster/f1_pipeline/utils/: snowflake_upsert.py
dagster/tmpcurkm09q/history/: runs.db
dagster/tmpcurkm09q/history/runs/: 68107507-fd1f-4804-8380-7a44d510cb34.db  index.db
dagster/tmpcurkm09q/schedules/: schedules.db
dagster/tmpwkj9vawe/history/: runs.db
dagster/tmpwkj9vawe/history/runs/: index.db
dagster/tmpwkj9vawe/schedules/: schedules.db
infra/: ecr.tf  ecs.tf  ecs_tasks.tf  (+3 more)
orchestration/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  workspace.yaml
orchestration/dagster_pipeline/: __init__.py
orchestration/dagster_pipeline/assets/dbt/: __init__.py  dbt_assets.py
orchestration/dagster_pipeline/jobs/: __init__.py
orchestration/dagster_pipeline/resources/: snowflake_resource.py
orchestration/dagster_pipeline/schedules/: __init__.py
orchestration/dagster_pipeline/source_assets/: kafka_snowflake.py
orchestration/dagster_pipeline/utils/: snowflake_upsert.py
(+96 files in other folders)
