[project]
name = "dagster_pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_pipeline"
code_location_name = "dagster_pipeline"

[tool.setuptools.packages.find]
exclude=["dagster_pipeline_tests"]